# AI-News

./: .gitignore  README.md  pyproject.toml  repo_summary_generator.py
.codex/skills/digest-quality/: SKILL.md
.codex/skills/project-orientation/: SKILL.md
src/: crawler.py  localizer.py  translator.py  trending_fetcher.py
src/cli/: __init__.py  config.py  crawl.py  export.py  extract.py  main.py  summarize.py  trending.py  validate.py
src/digest/: __init__.py  ai.py  cli.py  editorial.py  workflow.py
src/document_extractor/: __init__.py  extractor.py
src/exporter/: __init__.py  base.py  json.py  markdown.py  types.py
src/github_trending_vi_digest/: __init__.py  cli.py  config.py  core.py  crawler.py  exporter.py  extractor.py  fetcher.py  localizer.py  models.py  summarizer.py
src/validator/: __init__.py  base.py  cli.py  config.py  language.py  rules.py  terms.py  trending.py  workflow.py
templates/: export.md.j2
tests/: test_cli_skeleton.py  test_extractor.py  test_localizer.py  test_repo_summary_generator.py  test_translator.py
tests/cli/: test_crawl.py  test_export.py  test_extract.py  test_main.py  test_summarize.py  test_trending.py  test_validate.py
tests/digest/: test_ai.py  test_workflow_editorial.py
tests/exporter/: test_exporter_base.py  test_json.py  test_markdown.py
tests/integration/: test_digest_cli.py  test_exporter.py  test_fetch_cli.py  test_qa_validation.py  test_readme_localization.py
tests/validator/: test_language.py  test_rules.py  test_validator_base.py  test_validator_rules.py  test_validator_trending.py
(+5 files in other folders)
