[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "github-trending-vi-digest"
version = "0.1.0"
description = "CLI skeleton for producing Vietnamese digests of GitHub Trending repositories."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Multica" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
validate-localized = "validator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
